--- a/PruebasGit/src/main/resources/GoogleMapsV3.html
+++ b/PruebasGit/src/main/resources/GoogleMapsV3.html
@@ -8,7 +8,7 @@
         #map_canvas { height: 100% }
     </style>
     <script type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPyghsa9K05Gco9elF_p7wZXJ8TrHW240&sensor=false">
+            src="https://maps.googleapis.com/maps/api/js?key=<Key API Google >&sensor=false">
     </script>
     <script type="text/javascript">
         function initialize() {
